bug 55545 - set the table preferred width during an unconstrained reflow. Return the preferred width as the maximum width when requested in the outer table reflow. a=buster, r=dcone